--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="styles/main.css">
+  <script src="js/main.js"></script>
 </head>
 <body>
   <h1>Number Form</h1>
